--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ layout: page
   </div>
   <div class="col-sm-10 col-lg-4">
     <div class="text-center">
-      <img src="assets/images/about-beanie.jpg" class="img-thumbnail" alt="profile pic of me in a beanie" style="max-width: 70%; max-height: auto; margin-bottom: 3rem;">
+      <img src="../assets/images/about-beanie.jpg" class="img-thumbnail" alt="profile pic of me in a beanie" style="max-width: 70%; max-height: auto; margin-bottom: 3rem;">
     </div> 
   <div class="text-center" style="line-height: 200%;">
       <p class="fs-4">
