editing rips research

--- a/_posts/2022-12-24-RIPS-research.html
+++ b/_posts/2022-12-24-RIPS-research.html
@@ -30,7 +30,8 @@ externalLink: false
 <a href="https://www.ipam.ucla.edu/programs/student-research-programs/research-in-industrial-projects-for-students-rips-2022/"
     target="_blank">Research in Industrial Projects for Students</a> (RIPS) 
     is an industrial research program held yearly by UCLA's Institute for Pure and Applied Mathematics (IPAM). Students from around the globe come 
-    and work on projects given by industry sponsors. 
+    and work on projects given by industry sponsors. I had the wonderful opportunity to travel to LA, meet some seriously cool people, and write 
+    plenty of code in the summer of 2022.
     My team's project, "<em>Distributed Kalman Filter Designs and Experiments for Proliferated Low Earth Orbit (pLEO) Satellite Constellations</em>,"
     was sponsored by 
     <a href="https://aerospace.org/" target="_blank">The Aerospace Corporation</a>, a research and development center located in El Segundo, CA.
@@ -40,10 +41,16 @@ externalLink: false
     For this problem, we used Kalman filters and distributed Kalman filters, which are state estimation algorithms. 
 </p>
 
-
 <div class= "text-center">
     <img src="../assets/images/projects/ipam.jpg" alt="my research team outside of IPAM" style="max-width:55%;">
 </div>
+<br>
+<div class="text-center">
+    <figure>
+    <figcaption> My team. Not pictured: my favorite office-mate and coding partner, who escaped to the East Coast shortly before the end of the summer.</figcaption>   
+    </figure>
+</div>
+
 
 <p>
     We implemented three distributed algorithms in Python: the Naive filter, the Primitive Distributed Kalman Filter (PDKF), and the 
@@ -73,13 +80,12 @@ externalLink: false
     we began to focus more on DCL, as it seemed to have the best performance out of all our filters. 
 </p>
 
-
 <div class="text-center">
     <img src="../assets/images/projects/naive_beta_tuning_80hr.png" alt="naive filter beta tuning graph" style="max-width:75%">
 </div>
 
 <p>
-    Our other experiments with DCL included varying the constellation sizes, limiting communcation 
+    Our other experiments with the DCL algorithm included varying the constellation sizes, limiting communcation 
     between planes, and changing the order of measurement updates. 
 </p>
   
