--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@ permalink: /404.html
 <section class="lost-container">
   <h1>Uh oh! Something went wrong.</h1>
   <div class="link">
-    <img class="selfie" alt="{{ site.title }}" src="{{ site.url }}/assets/images/error.png" />
+    <img class="selfie" alt="{{ site.title }}" src="{{ site.url }}/assets/images/error.jpg" style="max-width:65%" />
   </div>
   <br />
   <br />
