--- a/_posts/2022-12-29-LA-recommendations.html
+++ b/_posts/2022-12-29-LA-recommendations.html
@@ -9,7 +9,7 @@ tag:
 - Los Angeles
 category: blog
 author: kjros
-desription: My recommendations after spending a summer in LA
+desription: "My recommendations after spending a summer in LA"
 ---
 
 <p>My first impression of Los Angeles? Way too hot. My second impression? Incredibly languid.</p>
