fixing image style

--- a/_posts/2022-12-24-RIPS-research.html
+++ b/_posts/2022-12-24-RIPS-research.html
@@ -15,6 +15,9 @@ category: project
 author: kjros
 externalLink: false
 ---
+<style>
+    img {object-fit: contain;}
+</style>
 
           <!-- <h3>
             Research in Industrial Projects for Undergraduates (RIPS)
@@ -42,7 +45,7 @@ externalLink: false
 </p>
 
 <div class= "text-center">
-    <img src="../assets/images/projects/ipam.jpg" alt="my research team outside of IPAM" style="max-width:55%;">
+    <img src="../assets/images/projects/ipam.jpg" alt="my research team outside of IPAM" style="max-width:50%">
 </div>
 <br>
 <div class="text-center">
@@ -65,7 +68,7 @@ externalLink: false
 </p>
 
 <div class="text-center">
-    <img src="../assets/images/projects/wrapped-dcl.png" alt="dcl results on satellite uncertainties" style="max-width:75%;">
+    <img src="../assets/images/projects/wrapped-dcl.png" alt="dcl results on satellite uncertainties">
 </div>
 
 <p>  
@@ -81,7 +84,7 @@ externalLink: false
 </p>
 
 <div class="text-center">
-    <img src="../assets/images/projects/naive_beta_tuning_80hr.png" alt="naive filter beta tuning graph" style="max-width:75%">
+    <img src="../assets/images/projects/naive_beta_tuning_80hr.png" alt="naive filter beta tuning graph">
 </div>
 
 <p>
