--- a/_posts/2022-12-29-LA-recommendations.html
+++ b/_posts/2022-12-29-LA-recommendations.html
@@ -130,7 +130,7 @@ My answers, to their disappointment:
 
 <div class="text-center">
     <img class="image" src="..\assets\images\blog\blog-post\santa-monica-meme-house.jpg" 
-    alt="pink and purple house on left, black and gray house on right" style="max-width:65%">
+    alt="pink and purple house on left, black and gray house on right">
 </div>
 
 <p>
@@ -165,7 +165,7 @@ My answers, to their disappointment:
 
 <div class="text-center">
     <img class="image" src="..\assets\images\blog\blog-post\robert-skeleton.jpg" 
-    alt="a levitating skeleton made of glass and pulsing neon blue light" style="max-width:45%">
+    alt="a levitating skeleton made of glass and pulsing neon blue light" style="max-width:65%">
 </div>
 
 <h3>5. Venice Beach Boardwalk</h3>
