--- a/_posts/2023-01-11-presenting-at-JMM.html
+++ b/_posts/2023-01-11-presenting-at-JMM.html
@@ -25,7 +25,7 @@ description: "My week in Boston at the biggest math conference in the world"
 </p>
 
 <p>
-    I spent the next four days running back and forth across the Prudential Center complex, located in the Back Bay neighborhood of Boston. 
+    I spent the next five days running back and forth across the Prudential Center complex, located in the Back Bay neighborhood of Boston. 
     It was a strange amalgamation: imagine a shopping mall, roughly in the shape of a plus sign. 
     Two of the ends led to hotels, while another led to the train station. 
     Interspersed were offices, restaurants, stores, and an outside garden park. 
@@ -81,10 +81,43 @@ description: "My week in Boston at the biggest math conference in the world"
 <p>
     I, personally, did not have this relevation at JMM. It was only afterwards, when I had time to reflect, 
     did I realize the connection I had to everyone else. That is not to say I belonged more than I thought (a bold statement). 
-    After all, I didn't suddenly change my mind about grad school, or soak up years of mathematical knowledge, in four days. 
-    Rather, I recognized smaller details. Moments of clarity. Cohesiveness. 
+    After all, I didn't suddenly change my mind about grad school, or soak up years of mathematical knowledge, in five days. 
+    Rather, I recognized smaller details. Moments of clarity. Cohesiveness. Continuity. 
 </p>
 
 <p>
     That's a little abstract. Let's move to empirical evidence. 
 </p>
+
+<h3>
+    The Look
+</h3>
+
+<p>
+    It became fairly easy to spot another JMM-er, even if they didn't have on their badge. 
+    You could pass by a cafe or lobby and see students typing up a LaTeX file, finalizing their poster or presentation. 
+    Professors would walk in twos or threes, discussing the latest talk or their research. 
+    We smiled at each other in the elevators, nodded our heads in passing; 
+    I did a double take when a fellow classmate waved at me through the window of a Dunkin' Donuts. 
+    <!--add some message here-->
+</p>
+
+<h3>The Exhibition</h3>
+
+<p>
+    Midway through the week, there was a ribbon-cutting ceremony and opening reception. Afterwards, 
+    attendees were free to explore the exhibition hall, comprising of art, vendor booths, free food, dancing, and a few 
+    magic shows. I spent the evening wandering the aisles, easily distracted by all sorts of nerdy things, including:
+</p>
+
+<h4>The Art</h4>
+
+<p>
+    
+</p>
+
+<h4>The Vendors</h4>
+
+<h4>The Easter Eggs</h4>
+
+<h3>The Pride</h3>
