--- a/_posts/2022-12-29-LA-recommendations.html
+++ b/_posts/2022-12-29-LA-recommendations.html
@@ -107,7 +107,7 @@ My answers, to their disappointment:
 
 <p> 
     Just around the corner from the market is The Last Bookstore, a two-story place filled with (you guessed it): books! 
-    Both floors are packed with bookshelves; check out rare books and vinyls downstairs, or shops and and a book tunnel upstairs. 
+    Both floors are packed with bookshelves; check out rare books and vinyls downstairs, or shops and a book tunnel upstairs. 
     You can also make your way around the balcony overlooking the lower level. 
     Sprinkled throughout the store, you'll also find cool decor, made from things like antique bric-a-brac or dessicated book pages. 
 </p>
