--- a/_posts/2023-01-11-JMM-in-Boston.html
+++ b/_posts/2023-01-11-JMM-in-Boston.html
@@ -73,7 +73,7 @@ description: "My week in Boston at the biggest math conference in the world"
 
 <p>
     Nevertheless, some of my acquaintances felt a lot more at home. They pointed out how welcoming, if strange, it was: to sit a room, 
-    and realize every single person in it was like you. You didn't have to seek out fellow mathematicians; they were already 
+    and realize every single person in it was like you. You didn't have to seek out fellow mathematicians - they were already 
     there.
 </p>
 
@@ -146,7 +146,7 @@ description: "My week in Boston at the biggest math conference in the world"
     At some point, a friend urged us to follow him, because "these people are giving away free textbooks!"
     And indeed, plenty of students were claiming a book - all you had to do was leave your email. 
     I eventually chose <a href="https://www.goodreads.com/book/show/12413727-nine-algorithms-that-changed-the-future" target="_blank">
-    Nine Algorithms That Changed the Future</a>, 
+    <i>Nine Algorithms That Changed the Future</i></a>, 
     although my friends had trouble choosing between complex analysis and group theory textbooks. 
 </p>
 
@@ -169,8 +169,8 @@ description: "My week in Boston at the biggest math conference in the world"
 
 <p>
     I loved the small touches, as well. I smiled at the electric blue punch labeled "Fibonacci Fizz", and the free 
-    math posters. Each table had a small wooden puzzle or cube for decor; I had to stop and solve an abandoned, mixed-up 
-    Pyraminx cube. Just walking through the aisles, you were bombarded with cute math jokes and references; you could 
+    math posters. Each table had a small wooden puzzle or cube for decor - I had to stop and solve an abandoned, mixed-up 
+    Pyraminx cube. Just walking through the aisles, you were bombarded with cute math jokes and references. You could 
     feel the energy and joy of everyone there. It felt a little less lonely, and a lot more fun. 
 </p>
 
