--- a/_posts/2022-12-29-LA-recommendations.html
+++ b/_posts/2022-12-29-LA-recommendations.html
@@ -150,7 +150,7 @@ My answers, to their disappointment:
 <p>
     The musuem, as expected, has plenty of galleries - you could spend a whole weekend there.
     (I spent three hours looking at only paintings, and didn't even make it through all of them. For those interested, 
-    my favorite was <a href="https://www.getty.edu/art/collection/object/103QTA" target="_blank">Danaë and the Shower of Gold</a>).
+    my favorite was <a href="https://www.getty.edu/art/collection/object/103QTA" target="_blank">Danaë and the Shower of Gold</a>.)
 </p>
 <p>
     I was also able to visit a special exhibit: <a href="https://www.getty.edu/research/exhibitions_events/exhibitions/anatomy/"
