--- a/_posts/2023-01-11-JMM-in-Boston.html
+++ b/_posts/2023-01-11-JMM-in-Boston.html
@@ -78,7 +78,7 @@ description: "My week in Boston at the biggest math conference in the world"
 </p>
 
 <p>
-    I, personally, did not have this relevation at JMM. It was only afterwards, when I had time to reflect, 
+    I, personally, did not have this revelation at JMM. It was only afterwards, when I had time to reflect, 
     did I realize the connection I had to everyone else. That is not to say I belonged more than I thought (a bold statement). 
     After all, I didn't suddenly change my mind about grad school, or soak up years of mathematical knowledge, in five days. 
     Rather, I recognized smaller details. Moments of clarity. Cohesiveness. Continuity. 
