loopy music paragraph

--- a/_drafts/music-no-one-else-can-hear.html
+++ b/_drafts/music-no-one-else-can-hear.html
@@ -18,15 +18,27 @@ desription: "My relationship with music as an afterthought"
 
 <p>
     It wasn't always that way. Growing up, it was more detached. I certainly listened to songs: from my dad's record player, to 
-    the radio, to music videos on YouTube. I made my first playlist in high school on Spotify. It had no theme or meaning, as many 
+    the radio, to music videos on YouTube. I made my first playlist in high school. It had no theme or meaning, as many 
     tend to have. Instead, I just added songs I liked more than others, and would consistently <i>only</i> listen to that playlist. 
-    Throughout four years, I managed to rack up 12 hours - ranging from Fall Out Boy and Panic! at the Disco to Maroon 5 
+    Throughout three years, I racked up 12 hours - ranging from Fall Out Boy and Panic! at the Disco to Maroon 5 
     and Taylor Swift. 
 </p>
 
 <p>
     Around that time, I became enamored with the lyrics. I would write lines on my arms in ink every day, and 
-    keep a list of which stanzas were my favorite. The criteria? How the words felt on my tongue. I liked the ones that tasted sweet - 
-    looping and flowing, and maybe a little heartbroken. Or, those that had a strong cadence - transitioning from slick to biting so 
-    fast, it left you breathless. 
+    keep a list of which stanzas were my favorite. The criteria? How the words felt on my tongue. 
+    
+    Words that tasted sweet: looping melodically, maybe a little heartbroken; words with a strong cadence: transitioning from 
+    slick to biting so fast, it leaves you breathless; words that echo in your head: haunting and melancholic, crooning for a life 
+    you can't remember; words that dance in your mouth: popping and fizzing, like fireworks; words that are saturated with color,
+    or feel playful, or have deeper meanings, or say everything you can't bring yourself to say. 
+</p>
+
+<p>
+    That interest - or maybe obsession - remains today, only with a new set of songs. 
+</p>
+
+<p>
+    My music taste finally started branching out when I reached my sophomore year of college. Turns out, there's only so many 
+    times you can listen to the same songs over and over again. 
 </p>
