update music draft

--- a/_drafts/music-no-one-else-can-hear.html
+++ b/_drafts/music-no-one-else-can-hear.html
@@ -17,8 +17,8 @@ desription: "My relationship with music as an afterthought"
 </p>
 
 <p>
-    It wasn't always that way. Growing up, it was more detached. I certainly listened to songs: from my dad's record player, to 
-    the radio, to music videos on YouTube. I made my first playlist in high school. It had no theme or meaning, as many 
+    It wasn't always that way. Growing up, it was more detached. I certainly listened to songs: from my dad's record player, on
+    the radio, watching music videos on YouTube. I made my first playlist in high school. It had no theme or meaning, as many 
     tend to have. Instead, I just added songs I liked more than others, and would consistently <i>only</i> listen to that playlist. 
     Throughout three years, I racked up 12 hours - ranging from Fall Out Boy and Panic! at the Disco to Maroon 5 
     and Taylor Swift. 
@@ -28,17 +28,46 @@ desription: "My relationship with music as an afterthought"
     Around that time, I became enamored with the lyrics. I would write lines on my arms in ink every day, and 
     keep a list of which stanzas were my favorite. The criteria? How the words felt on my tongue. 
     
-    Words that tasted sweet: looping melodically, maybe a little heartbroken; words with a strong cadence: transitioning from 
-    slick to biting so fast, it leaves you breathless; words that echo in your head: haunting and melancholic, crooning for a life 
-    you can't remember; words that dance in your mouth: popping and fizzing, like fireworks; words that are saturated with color,
-    or feel playful, or have deeper meanings, or say everything you can't bring yourself to say. 
+    There were words that tasted sweet: swirling melodically, maybe a little heartbroken; words with a strong cadence: transitioning from 
+    slick to biting so fast, it left you breathless; words that echoed in your head: haunting and melancholic, crooning for a life 
+    you couldn't remember; words that danced in your mouth: popping and fizzing, like fireworks; words saturated with color, 
+    or <!--figure out how to end??-->
 </p>
 
 <p>
-    That interest - or maybe obsession - remains today, only with a new set of songs. 
+    That interest - or maybe obsession - remains today, only with a different set of songs. 
 </p>
 
 <p>
-    My music taste finally started branching out when I reached my sophomore year of college. Turns out, there's only so many 
-    times you can listen to the same songs over and over again. 
+    I branched out more once I reached my sophomore year of college. I let Spotify choose what I listened to, looping 
+    my "recommended" feed in the background while I worked on homework. When I started recognizing songs, and didn't hate them 
+    entirely, I'd add them to a new playlist. Many of them were indie, with little-known artists. 
+    They became familiar, much like my high school tracks. 
 </p>
+
+<p>
+    Eventually, I started breaking ground in my Spotify library. I meticulously organized playlists into cascading folders 
+    and sub-lists, found the perfect names and captions, re-discovered old music, and stumbled upon new songs by chance. 
+    But, as I kept making playlists, I realized the they started entwining themselves into periods of my life.
+</p>
+
+<p>
+    There's an old scene from <i>Mad Men</i>, where 
+    <a href="https://www.youtube.com/watch?v=suRDUFpsHus" target="_blank">Don Draper pitches Kodak's slide projector</a> 
+    as part of an ad campaign. He flips through personal photos in the dim, smoky meeting room, 
+    showing his wedding day, his kids, his summer days: 
+</p>
+
+<figure>
+    <blockquote cite = "https://www.youtube.com/watch?v=suRDUFpsHus">
+        <p>
+            "Teddy told me that in Greek, nostalgia literally means 'the pain from an old wound.' 
+            It's a twinge in your heart, far more powerful than memory alone. This device isn't a space ship. 
+            It's a time machine. It goes backwards, forwards. Takes us to a place where we ache to go again."
+        </p>
+    </blockquote>
+</figure>
+
+  
+<!--Something about: joy in creating names and captions, careful organization, realizing how they started representing points 
+in my life, and how inorganically creating playlists never go well-->
