adding wistem exec photo

--- a/activities.html
+++ b/activities.html
@@ -10,9 +10,24 @@ layout: page
   <p class="fs-4 fw-light">
     Chicago, IL 
 </p>
-<img src="../assets/images/wistem-insta-cotreasurer.jpg" alt="instagram exec board post of me" style="max-width:55%">
 </div>
-<br> 
+
+<div class="text-center">
+  <img src="../assets/images/wistem-insta-cotreasurer.jpg" alt="instagram exec board post of me" style="max-width:55%">
+</div>
+
+<br>
+
+<div class="text-center">
+  <img src="../assets/images/wistem-exec-2023.jpg" alt="exec board of wistem in 2023 standing in a row" style="max-width:80%">
+</div>
+<br>
+<div class="text-center">
+  <figure>
+    <figcaption>2023 Executive Board of Wistem</figcaption>   
+  </figure>
+</div>
+
 <p class="fs-5 fw-light">
     <a href="https://sites.google.com/iit.edu/wistem/home" target="_blank">WiSTEM</a> is a student-led 
     organization at IIT, founded in 2020. Our goal is to create
