--- a/_drafts/music-no-one-else-can-hear.html
+++ b/_drafts/music-no-one-else-can-hear.html
@@ -59,13 +59,16 @@ desription: "My relationship with music as an afterthought"
 </p>
 
 <figure>
-    <blockquote cite = "https://www.youtube.com/watch?v=suRDUFpsHus">
+    <blockquote cite="https://www.youtube.com/watch?v=suRDUFpsHus">
         <p>
             "Teddy told me that in Greek, nostalgia literally means 'the pain from an old wound.' 
             It's a twinge in your heart, far more powerful than memory alone. This device isn't a space ship. 
             It's a time machine. It goes backwards, forwards. Takes us to a place where we ache to go again."
         </p>
     </blockquote>
+    <figcaption>
+        - Don Draper, <i>Smoke Gets in Your Eyes</i>
+    </figcaption>
 </figure>
 
   
