--- a/activities.html
+++ b/activities.html
@@ -19,7 +19,7 @@ layout: page
 <br>
 
 <div class="text-center">
-  <img src="../assets/images/wistem-exec-2023.jpg" alt="exec board of wistem in 2023 standing in a row" style="max-width:80%">
+  <img src="../assets/images/wistem-exec-2023.JPG" alt="exec board of wistem in 2023 standing in a row" style="max-width:80%">
 </div>
 <br>
 <div class="text-center">
