small edits because perfectionism

--- a/_posts/2023-01-11-JMM-in-Boston.html
+++ b/_posts/2023-01-11-JMM-in-Boston.html
@@ -47,7 +47,7 @@ description: "My week in Boston at the biggest math conference in the world"
 
 <p>
     To be honest, my time at JMM was mostly a blur. I didn't have the chance, or motivation, to explore Boston as much as I had intended, 
-    since it was raining the entire time. And with a crammed event schedule from 8am to 8pm, I spent my time drifting from talk to talk, 
+    since it was raining all week. And with a crammed event schedule from 8am to 8pm, I spent my time drifting from talk to talk, 
     returning to my room for long cat-naps, and trying to meet up with other students.
 </p>
 
@@ -218,7 +218,7 @@ description: "My week in Boston at the biggest math conference in the world"
 <p>
     Since I don't want to pursue research as a full-time career (to the disappointment of many of my professors), 
     I don't know if I'd ever feel 100% comfortable at a conference like JMM. 
-    Perhaps that's not so strange; we all have to start somewhere, and being able to attend is, in itself, a privilege. 
+    Perhaps that's not so strange: we all have to start somewhere, and being able to attend is, in itself, a privilege. 
 </p>
 
 <p>
