--- a/_drafts/music-no-one-else-can-hear.html
+++ b/_drafts/music-no-one-else-can-hear.html
@@ -21,13 +21,15 @@ desription: "My relationship with music as an afterthought"
     the radio, watching music videos on YouTube. I made my first playlist in high school. It had no theme or meaning, as many 
     tend to have. Instead, I just added songs I liked more than others, and would consistently <i>only</i> listen to that playlist. 
     Throughout three years, I racked up 12 hours - ranging from Fall Out Boy and Panic! at the Disco to Maroon 5 
-    and Taylor Swift. 
+    and One Direction. 
 </p>
 
 <p>
     Around that time, I became enamored with the lyrics. I would write lines on my arms in ink every day, and 
     keep a list of which stanzas were my favorite. The criteria? How the words felt on my tongue. 
-    
+</p>
+
+<p>
     There were words that tasted sweet: swirling melodically, maybe a little heartbroken; words with a strong cadence: transitioning from 
     slick to biting so fast, it left you breathless; words that echoed in your head: haunting and melancholic, crooning for a life 
     you couldn't remember; words that danced in your mouth: popping and fizzing, like fireworks; words saturated with color, 
@@ -48,14 +50,13 @@ desription: "My relationship with music as an afterthought"
 <p>
     Eventually, I started breaking ground in my Spotify library. I meticulously organized playlists into cascading folders 
     and sub-lists, found the perfect names and captions, re-discovered old music, and stumbled upon new songs by chance. 
-    But, as I kept making playlists, I realized the they started entwining themselves into periods of my life.
+    But, that's when I realized: music had started to interweave into periods of my life. <!--grammar?-->
 </p>
 
 <p>
     There's an old scene from <i>Mad Men</i>, where 
     <a href="https://www.youtube.com/watch?v=suRDUFpsHus" target="_blank">Don Draper pitches Kodak's slide projector</a> 
-    as part of an ad campaign. He flips through personal photos in the dim, smoky meeting room, 
-    showing his wedding day, his kids, his summer days: 
+    as part of an ad campaign. He flips through personal photos in the dim, smoky meeting room:
 </p>
 
 <figure>
@@ -71,6 +72,51 @@ desription: "My relationship with music as an afterthought"
     </figcaption>
 </figure>
 
-  
+<p>
+    Likewise, when I listen to certain songs, I'm swept backwards and forwards in time. It's more than just remembering 
+    the first time I heard them. All my senses are flooded: the same scents, images, emotions. 
+</p>
+
+<p>
+    Sometimes, this is welcoming. Hearing 
+    "<a href="https://open.spotify.com/track/5Z3GHaZ6ec9bsiI5BenrbY?si=d41a3fcfbb984f9a" target="_blank">Young, Dumb, and Broke</a>" 
+    takes me back to being buried in sand, half-asleep, feeling the sun's warmth, the taste of strawberries lingering in my mouth. 
+    "<a href="https://open.spotify.com/track/58iCq0hR2Emv6DZNxj7mGa?si=8a48721d75134afc" target="_blank">June</a>" 
+    leaves me flushing, smelling the autumn breeze, adrenaline pumping.  
+    One of my favorite songs, 
+    "<a href="https://open.spotify.com/track/7sljA9XJXVCbbXLK5XpDtu?si=fda97279158c424c" target="_blank">Maybe</a>", 
+    slows down my heartrate, reminded of the way rain splatters across the windows of my campus center. 
+</p>
+
+<p>
+    Other times, it renders me unable to listen to songs I once loved. 
+    "<a href="https://open.spotify.com/track/0GO8y8jQk1PkHzS31d699N?si=57de2e8c82814216" target="_blank">Tongue Tied</a>" 
+    and "<a href="https://open.spotify.com/track/63OB8oKmBUUYiRtrRtFCvX?si=4d23e37362874189" target="_blank">Girl</a>" 
+    make me nauseous, while 
+    "<a href="https://open.spotify.com/track/7dKdQiS6jWWCg5bOj7Ag8y?si=438d61ab7444409b" target="_blank">Fall Together</a>" 
+    hollows me out. 
+</p>
+
+<p>
+    Selecting a certain playlist sets me back to the time I first made it. Some are inextricably tied to cities I've 
+    visited, or even to entire semesters. Music has become the fastest way to escape reality. 
+    A few times, I've created playlists right before traveling, with the hopes of binding the memories.
+    It never worked. It felt inorganic, no matter how hard I tried. 
+</p>
+
+<p>
+    So, where does that leave me? 
+</p>
+
+<p>
+    When I feel lonely, I play Taylor Swift's <i>Lover</i>: it kept me company in San Fransisco. 
+    When I need motivation, I play Melanie Martinez's <i>K-12</i>: it's reminiscent of my runs along Lake Michigan. 
+    And when I ache to be somewhere else, or with someone else? 
+</p>
+
+<p>
+    There's a song, waiting to be heard. 
+</p>
+
 <!--Something about: joy in creating names and captions, careful organization, realizing how they started representing points 
 in my life, and how inorganically creating playlists never go well-->
