--- a/_drafts/music-no-one-else-can-hear.html
+++ b/_drafts/music-no-one-else-can-hear.html
@@ -73,8 +73,8 @@ desription: "My relationship with music as an afterthought"
 </figure>
 
 <p>
-    Likewise, when I listen to certain songs, I'm swept backwards and forwards in time. It's more than just remembering 
-    the first time I heard them. All my senses are flooded: the same scents, images, emotions. 
+    Likewise, when I listen to music, I'm swept backwards and forwards in time. It's more than a simple 
+    memory. All my senses are flooded: the same scents, images, emotions. 
 </p>
 
 <p>
