--- a/_drafts/wisdoms-daughter-walks-alone.html
+++ b/_drafts/wisdoms-daughter-walks-alone.html
@@ -24,7 +24,7 @@ description: "Flying solo at a women's mathematics conference"
     It was the 25th anniversary of NCUWM. 
     About 230 students, invited speakers, and organizers attended. 
     Of those, about 100 undergraduates presented research in a talk or poster. 
-    It was held for three days in the Embassy Suites in Lincoln, NE.
+    It was held Friday-Sunday, in the Embassy Suites in Lincoln, NE.
 </p>
 
 <p>
@@ -43,15 +43,64 @@ description: "Flying solo at a women's mathematics conference"
     detrimental to my work, or my experiences growing up. Maybe I'm one of the lucky ones: I always hear about 
     micro-aggressions, or women having to earn respect they already deserved, and there's no doubt of blatant 
     rasicm and sexism in professional spaces. Or maybe I'm not that observant: maybe I considered 
-    any hesitancy and self-doubt a result of my personality, rather than some intrinsic identity. 
+    any hesitancy or self-doubt a result of my personality, rather than some intrinsic identity. 
 </p>
 
 <p>
-    But ultimately, I've never felt out of place in a room full of male peers. I doubt I've actively noticed - maybe just passively. 
+    I've never felt out of place in a room full of male peers. I doubt I've actively noticed - maybe just passively. 
     Call it overconfidence, or call it lack of awareness. In the end, when I listened to others share their 
     frustrations and experiences as not just women, but as women mathematicians? It left me wondering: 
+    when, if at all, will I find myself in the same position? Am I too callous, or have the spaces I've been in always 
+    been inclusive? 
 </p>
 
+<p>
+    For now, and especially at the conference, I'll just sit back and listen. 
+</p>
+
+<hr style="height:3px">
+
+<p>
+    <i>On the Inspirational</i>
+</p>
+
+<p>
+    I'm not a huge fan of motivational talks, or discussions about "community" and "belonging". 
+    While finding people you connect with and care about is imperative, especially 
+    for incredibly social creatures like humans, an hour talk on <i>why</i> it's important begins to feel preachy. 
+    For me, there's a fine line between an inspirational spark and a didactic lecture. 
+</p>
+
+<p>
+    I attended quite a few events which toed that line that weekend. 
+    Many of them were plenaries and panels, on discovering your mentors, advice, finding that community. 
+    That's not to insult the speakers: all of them were brilliant mathematicians, with a passion for advancing 
+    those spaces in math (and the work and experience to prove it). It just wasn't for me; however, I'm sure 
+    plenty felt seen, and found it empowering. 
+</p> 
+
+<hr style="height:3px">
+
+<p>
+    <i>On Graduate School</i>
+</p>
+
+<p>
+    At conferences, it's not a matter of whether you're going into academia or industry. It's a matter of which graduate school,
+    pure math or applied math, research or teaching. 
+</p>
+
+<p>
+    I'm not interested in academia. While I love math, I don't want it to be my entire life. 
+    I don't want to stress about quals, or the two body problem. 
+    The decision was easy; attending conferences in spite of that decision is not. 
+</p>
+
+<p>
+    To illustrate: each talk I attended encouraged you to pursue grad school. It wasn't malicious, or pretentious; rather, 
+    they saw grad school as an opportunity many students failed to take out of fear. Nearly every invited speaker and guest 
+    held a PhD, or was a graduate student. Of the students I talked to, every one of them dreamed of going to grad school. 
+</p>
 <!--panelists, "piece of advice", u-grad talks, plenaries, networking dinner
 normally not into motivational shit, nor do I really consider my gender or race something that gets in my way
 and I didn't enjoy the plenaries, or the panels much, because it feels like being talked to
