adding music post

--- a/_drafts/wisdoms-daughter-walks-alone.html
+++ b/_drafts/wisdoms-daughter-walks-alone.html
@@ -98,8 +98,9 @@ description: "Flying solo at a women's mathematics conference"
 
 <p>
     To illustrate: each talk I attended encouraged you to pursue grad school. It wasn't malicious, or pretentious; rather, 
-    they saw grad school as an opportunity many students failed to take out of fear. Nearly every invited speaker and guest 
-    held a PhD, or was a graduate student. Of the students I talked to, every one of them dreamed of going to grad school. 
+    they saw it as an opportunity many students failed to take out of fear. Nearly every invited speaker and guest 
+    held a PhD, or was studying for one. Of the students I talked to, every one of them dreamed of going to grad school. 
+    
 </p>
 <!--panelists, "piece of advice", u-grad talks, plenaries, networking dinner
 normally not into motivational shit, nor do I really consider my gender or race something that gets in my way
