--- a/_drafts/wisdoms-daughter-walks-alone.html
+++ b/_drafts/wisdoms-daughter-walks-alone.html
@@ -13,7 +13,7 @@ description: "Flying solo at a women's mathematics conference"
 --- 
 
 <p>
-    In the last post, I discussed my week at JMM and my implicit sense of belonging in a world of mathematicians. 
+    A few posts ago, I discussed my week at JMM and my implicit sense of belonging in a world of mathematicians. 
     This last weekend, I once again hopped on a plane (at an ungodly hour) to present my summer research at the 
     <a href="https://math.unl.edu/ncuwm" target="_blank">Nebraska Conference for Undergraduate Women in Mathematics</a> (NCUWM). 
     Unlike JMM, this time it was solo: I was the only teammate presenting. Also unlike JMM: that belonging was more explicit. 
@@ -100,8 +100,14 @@ description: "Flying solo at a women's mathematics conference"
     To illustrate: each talk I attended encouraged you to pursue grad school. It wasn't malicious, or pretentious; rather, 
     they saw it as an opportunity many students failed to take out of fear. Nearly every invited speaker and guest 
     held a PhD, or was studying for one. Of the students I talked to, every one of them dreamed of going to grad school. 
-    
 </p>
+
+<p>
+    Needless to say, I skipped the plenary "Picking a Graduate School". 
+</p>
+
+<hr>
+<!-- <hr style="height:3px"> -->
 <!--panelists, "piece of advice", u-grad talks, plenaries, networking dinner
 normally not into motivational shit, nor do I really consider my gender or race something that gets in my way
 and I didn't enjoy the plenaries, or the panels much, because it feels like being talked to
