--- a/_drafts/wisdoms-daughter-walks-alone.html
+++ b/_drafts/wisdoms-daughter-walks-alone.html
@@ -28,12 +28,12 @@ description: "Flying solo at a women's mathematics conference"
 </p>
 
 <p>
-    So, as you can imagine, it was a significantly smaller conference, and much more intimate. 
+    As you can imagine, it was a significantly smaller conference, and much more intimate. 
 </p>
 
 <p>
     The official theme this year was "Inspiring Women for Generations." Yet, with plenty of panels, 
-    plenaries, and breakout sessions, it was clear the conference sought to make mathematical spaces more inclusive and accessible overall. 
+    plenaries, and sessions, it was clear the conference sought to make mathematical spaces more inclusive and accessible overall. 
     Invited speakers discussed mentoring, community, engaging the public, confidence gaps, opportunities, being a minority in mathematics, 
     and of course, being a woman in mathematics.
 </p>
@@ -76,10 +76,8 @@ description: "Flying solo at a women's mathematics conference"
     Many of them were plenaries and panels, on discovering your mentors, advice, finding that community. 
     That's not to insult the speakers: all of them were brilliant mathematicians, with a passion for advancing 
     those spaces in math (and the work and experience to prove it). It just wasn't for me; however, I'm sure 
-    plenty felt seen, and found it empowering. 
+    plenty found it empowering. 
 </p> 
-
-<hr>
 
 <p>
     <i>On Graduate School</i>
@@ -99,7 +97,7 @@ description: "Flying solo at a women's mathematics conference"
 <p>
     To illustrate: each talk I attended encouraged you to pursue grad school. It wasn't malicious, or pretentious; rather, 
     they saw it as an opportunity many students failed to take out of fear. Nearly every invited speaker and guest 
-    held a PhD, or was studying for one. Of the students I talked to, every one of them dreamed of going to grad school. 
+    held a PhD, or was studying for one. Of the students I met, every one of them dreamed of going to grad school. 
 </p>
 
 <p>
@@ -107,6 +105,63 @@ description: "Flying solo at a women's mathematics conference"
 </p>
 
 <hr>
+
+<p>
+    So, what parts <i>did</i> I enjoy? 
+    If you read my post on JMM, you'll recall I found beauty and belonging in the quiet moments. 
+    It was subtle: the mathematical art, the smiles, the humor. 
+
+<p>
+    In Lincoln, I didn't care for the large, scripted talks - it felt a bit disconnected, like I was a spectator, meant to 
+    clap at the right times and chuckle at the right jokes. 
+    Instead, I found comfort in the more personal moments: dinner conversations, or breakout sessions. 
+    They were led by professors or invited guests, with a quality of vulnerability I didn't expect. 
+    Unlike JMM, it didn't take days afterwards to convince myself I belonged. It was instantaneous. 
+</p>
+
+<p>
+    <i>
+        On Imposter Syndrome
+    </i>
+</p>
+
+<p>
+    The first dinner of the weekend was held in a grand ballroom, each piece of silverware and folded napkins placed perfectly. 
+    Halfway through, four professors sat at the front stage for the panel of the evening: "Random Bits of Advice". 
+    Most of it was standard: personal stories, how to advocate for yourself, balancing having a family and a career. 
+    Then, one student asked how they overcame imposter syndrome.
+</p>
+
+<p>
+    I didn't hear this phrase until high school - and when I did, I'd never heard anything that described me more. 
+    Although I've improved since then, I sometimes think: when will I fail? 
+    When will everyone I know realize I'm not as skilled, or talented, as I seem? 
+</p>
+
+<p>
+    After a moment of heavy silence, one professor slowly leaned in and said: "I don't think I ever did. I've 
+    accomplished everything I've ever wanted in my career. And I still ask myself: when will I be found out?"
+</p>
+
+<p>
+    It may be a mistake to view your professors as inherently infallable. Deep down, I know they aren't. They're human, 
+    just like anyone else. But I've never considered me to be like them, or them like me. 
+    To hear the speaker admit this, despite her achievements, almost validated my own struggles. 
+    I felt a little more seen, however small and fleeting. 
+</p>
+
+<p>
+    <i>
+        On Making Mistakes
+    </i>
+</p>
+
+<p>
+    <i>
+        On Passion
+    </i>
+</p>
+
 <!-- <hr style="height:3px"> -->
 <!--panelists, "piece of advice", u-grad talks, plenaries, networking dinner
 normally not into motivational shit, nor do I really consider my gender or race something that gets in my way
