finishing ncuwm post

--- a/_posts/2022-12-24-hello-world.html
+++ b/_posts/2022-12-24-hello-world.html
@@ -39,7 +39,7 @@ desription: "My first blog post on writing!"
     to address climate change - so, pretty interesting. I sat down, and next thing I know - it's four hours and nine pages later, all done in the blink of an eye. 
     Ironically, my math professors also see this side of me. I burn through several packs of paper each semester for homework, and my proofs 
     are not nearly as concise as they expect. One year, I looked over an exam returned by a professor. 
-    Although I recieved full marks for one particular problem, they had written, "Please streamline for brevity".
+    Although I recieved full marks for one particular problem, they had written, "Please streamline for brevity."
 </p>
 <p>
     All of this is to say: when I find a chance to express my thoughts, I try to express every one of them. It's also much easier writing them down 
